--- a/Dust2Defend.html
+++ b/Dust2Defend.html
@@ -24,7 +24,25 @@
 				<a href="MirageAttack.html"> Mirage</a>
 				<a href="CacheAttack.html"> Cache</a>
 		<li><a href="Professional Counter Strike.html"> Professional Counter Strike </a> </li>
-	</ul>					
+	</ul>	
+	<h1> Counter Strike for Silvers</h1>		
+	
+	<div id="main">
+		<p style="font-size:20px">
+	Long: Holding long on Dust 2 is one of the hardest things to do if you don’t overcommit players. If you are playing a default setup on ct you will usually have one player solo holding long and one player watching cat and holding A site. You can either hold long corner (usually with an awp) or you can hold from pit (usually with a rifle). If you are holding long corner with an awp your only enemies are flashbangs, a well placed flash can completely blind you if your fully scoped in. You can’t really counter this if your reflex’s aren’t fast enough to avoid the flash. You can throw a counter flash to pushback any advancing enemies if you have been pushed out of your position. If you're holding long from pit you are waiting for the enemy to push out of long after they have used all of their utility to try and clear it. You can do this my crouching behind the wall leading down into pit and once they have thrown their flashes you pop out and get an unsuspecting kill. 
+
+		<img src="Pictures/Dust 2 Long.jpg" alt="CSGO" style="width:1000px; margin-top: 32px;" align="middle;" >
+		</p>
+		<p style="font-size:20px">
+		A site: Holding A site usually only requires one player long and one player holding site watching cat. You can watch cat from multiple positions, you can hold it from car which is more of an off angle and if you can hit your shots then it’s a good spot to position yourself in. Another good spot is hiding on ramp near X-box where only your head is showing, this gives you an advantage because less of your body is showing less the enemy is able to hit. If you have a rifle you can hide up in goose or you can hide behind the box on site and wait for the enemy to push up then peek. 
+		<img src="Pictures/A site D2.jpg" alt="CSGO" style="width:1000px; margin-top: 32px;" align="middle;" >
+		</p>
+		<p style="font-size:20px">
+		B site: Holding B site isn’t very hard and you should only worry about a fast B rush (early and late in the round) as that is the only way they would be able to overwhelm you. At the start of the round you should either throw a deep molotov into the tunnel to keep the terrorists in upper B tunnels. Then you should bounce a smoke and a flash into tuns to keep terrorists in B tunnels. You can play multiple spots to keep terrorists at bay. Hiding car is one of the safest positions because you are almost impossible to flash, this means you will be able to see the terrorists coming out of B main. Another spot is to play on site by the tall boxes where you can jiggle peak until you see an enemy or a flashbang. 
+		<img src="Pictures/B site D2.jpg" alt="CSGO" style="width:1000px; margin-top: 32px;" align="middle;" >
+		</p>
+	</div>			
+					
 </body>
 
 </html>
