--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
 	<h1> Counter Strike for Silvers</h1>		
 	
 	<div id="main">
-		<p>
+		<p style="font-size:30px">
+		Counter strike is a skill based game that rewards hard work and perfecting techniques and skill. It also provides a tactical side that other fps shooters don't have giving another level skill ceiling for pro's and the average person. 
 		
+		<img src="Pictures/csgo.png" alt="CSGO" style="width:800px; margin-top: 32px;" align="middle;" >
 		</p>
+		
 	</div>			
 </body>
 
