--- a/Dust2Attack.html
+++ b/Dust2Attack.html
@@ -24,7 +24,30 @@
 				<a href="MirageAttack.html"> Mirage</a>
 				<a href="CacheAttack.html"> Cache</a>
 		<li><a href="Professional Counter Strike.html"> Professional Counter Strike </a> </li>
-	</ul>					
+	</ul>
+	<h1> Counter Strike for Silvers</h1>	
+	<div id="main">
+		<p style="font-size:20px">
+		Long: Long A on Dust 2 is a game of luck and initial spawns, you can easily control long if you get to long first and peak before the enemy does. You can also just rush long and throw as many flashes over the doors as you can and try and overwhelm the enemy, after you have finished you can throw a cross smoke and flash any openings in the smoke and easily take A site overwhelming the player on A (beware of players pushing through smoke). You can also have an awper peak the corner to try and get a pick as the long player will usually play the corner spot. Another thing you can try is to throw the X-box smoke for taking cat and then throwing another smoke on the corner and flashing over to take long and have one player hide mid and catch rotators. 
+		<img src="Pictures/Dust 2 Long.jpg" alt="CSGO" style="width:1000px; margin-top: 32px;" align="middle;" >
+		</p>
+		<p style="font-size:20px">
+		A site: By throwing the X-box smoke and the corner smoke you can have 2 players go cat and 3 go long or have 2 go long and one watch cat for rotators. By doing this you can split where the defense is looking and either catch them off guard or by combining well placed and timed flashes you can completely blind them combined with a smoke on cat and cross to block off players well you get to the site.
+		<img src="Pictures/A site D2.jpg" alt="CSGO" style="width:1000px; margin-top: 32px;" align="middle;" >
+		</p>
+		<p style="font-size:20px">
+		B site: B site on Dust 2 is one of the hardest sites to take because it’s just a narrow tunnel with no real ability to throw utility of the giant thing on top. So you're basically stuck with throwing things from inside tuns and that can be hard. You can throw a running flash from inside, you line yourself up with the blue trim on top of the wall and throw and it will bounce and land just outside flashing players holding from site. You can also throw a smoke using the same angle and it will pop just outside letting you enter the site as a group (beware of molotovs and nades thrown into tuns especially if they hear you running in tuns they will throw their nades).
+		<img src="Pictures/B site D2.jpg" alt="CSGO" style="width:1000px; margin-top: 32px;" align="middle;" >
+		</p>
+		<p style="font-size:20px">
+		mid to B: You can throw a smoke will your behind the box and look up at the window and throw the smoke off the wall which will bounce into ct spawn and block off the view from ct spawn this plus a flash over the double doors will allow you to push into mid and the up into B site. Using this plus a split you can pincer move onto b making it very hard to defend. 
+		<img src="Pictures/Mid Dust2.jpg" alt="CSGO" style="width:1000px; margin-top: 32px;" align="middle;" >
+		</p>
+		<p style="font-size:20px">
+		Cat: By throwing the X-box smoke to block off the awper mid and throwing a flash mid as well as over cat you can assure you easily take cat and can lead to an easy bombsite take. By throwing a smoke on cat and one down to block off ct spawn from ct ramp and throwing a pop flash off the box on cat you can push up onto site (Beware of a player long or car that rotated if you didn’t have a presence long).
+		<img src="Pictures/Cat Dust2.jpg" alt="CSGO" style="width:1000px; margin-top: 32px;" align="middle;" >
+		</p>
+	</div>						
 </body>
 
 </html>
